--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,7 +48,9 @@ RUN apt-get update -y && apt-get install --no-install-recommends -y \
  python-rosinstall \
  python-rosinstall-generator \
  python-wstool build-essential \
- ros-kinetic-catkin python-catkin-tools 
+ ros-melodic-catkin python-catkin-tools \
+ ros-melodic-moveit ros-melodic-moveit-plugins \ 
+ ros-kinetic-moveit-planners \ 
 && pip3 install numpy \
 && rm -rf /var/lib/apt/lists/* \
 && apt-get clean
