--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -97,10 +97,10 @@ mkdir /home/${user}/catkin_ws/$PROJECT/base/logs
 
 RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" >> $HOME/.bashrc
 
-RUN /bin/bash -c '. /opt/ros/$ROS_DISTRO/setup.bash; catkin_init_workspace /home/$DOCKER_USER/catkin_ws/$PROJECT/base/src'
-RUN /bin/bash -c '. /opt/ros/$ROS_DISTRO/setup.bash; cd /home/$DOCKER_USER/catkin_ws/$PROJECT/base/; catkin init'
-RUN /bin/bash -c '. /opt/ros/$ROS_DISTRO/setup.bash; cd /home/$DOCKER_USER/catkin_ws/$PROJECT/base/; catkin_make'
-RUN echo "source /home/$DOCKER_USER/catkin_ws/$PROJECT/base/devel/setup.bash" >> /home/$DOCKER_USER/.bashrc
+RUN /bin/bash -c '. /opt/ros/$ROS_DISTRO/setup.bash; catkin_init_workspace /home/${user}/catkin_ws/$PROJECT/base/src'
+RUN /bin/bash -c '. /opt/ros/$ROS_DISTRO/setup.bash; cd /home/${user}/catkin_ws/$PROJECT/base/; catkin init'
+RUN /bin/bash -c '. /opt/ros/$ROS_DISTRO/setup.bash; cd /home/${user}/catkin_ws/$PROJECT/base/; catkin_make'
+RUN echo "source /home/${user}/catkin_ws/$PROJECT/base/devel/setup.bash" >> /home/${user}/.bashrc
 
 RUN sudo rm -rf /home/${user}/catkin_ws/$PROJECT/base/src/*.txt 
 
